# RMSE-Normality-Test

./: .gitignore  LICENSE  README.md  pyproject.toml
rmse_test/: __init__.py  __main__.py  data_types.py  explore.py  fits.py  populations.py  rmse_test.py
tool/: update_version.py
